crates/mermaid-text/tests/regression_corpus/snapshots/state_composite_external_edges.snap
---
source: crates/mermaid-text/tests/regression_corpus.rs
expression: natural
---
 ╭─Active───────────────────╮
 │                          │
 │ ╭──────╮     ╭─────────╮ │
 │ │ Idle │────▸│ Working │ │
 │ ╰───▴──╯     ╰────┬────╯ │
 │     └─────────────┴      │
 ╰──────────────────────────╯
