crates/mermaid-text/tests/regression_corpus/snapshots/state_composite_external_edges.width80.snap
---
source: crates/mermaid-text/tests/regression_corpus.rs
expression: constrained
---
 ╭─Active───────────────────╮
 │                          │
 │ ╭──────╮     ╭─────────╮ │
 │ │ Idle │────▸│ Working │ │
 │ ╰───▴──╯     ╰────┬────╯ │
 │     └─────────────┴      │
 ╰──────────────────────────╯
