crates/mermaid-text/tests/regression_corpus/snapshots/state_composite_keyboard_lock.snap
---
source: crates/mermaid-text/tests/regression_corpus.rs
assertion_line: 72
expression: natural
---
 ╭─Active──────────────────────────────────────────────────╮
 │┌──────────────────────────EvNumLockPressed─────────────┐│
 ││╭────────────╮                           ╭───────────╮ ││
 │││ NumLockOff │──────────────────────────▸│ NumLockOn │ ││
 ││╰──────▴─────╯                           ╰───────────╯ ││
 │└───────┘                                       ┘───────┘│
 │ EvNumLockPressed                                        │
 │                            EvCapsLockPressed            │
 │ ╭─────────────╮                          ╭────────────╮ │
 │ │ CapsLockOff │─────────────────────────▸│ CapsLockOn │ │
 │ ╰──────▴──────╯     EvCapsLockPressed    ╰────────────╯ │
 │        └────────────────────────────────────────┘       │
 ╰─────────────────────────────────────────────────────────╯
