crates/mermaid-text/tests/regression_corpus/snapshots/state_composite_keyboard_lock.width80.snap
---
source: crates/mermaid-text/tests/regression_corpus.rs
expression: constrained
---
 ╭─Active──────────────────────────────────────────────────╮
 │┌──────────────────────────EvNumLockPressed─────────────┐│
 ││╭────────────╮                           ╭───────────╮ ││
 │││ NumLockOff │──────────────────────────▸│ NumLockOn │ ││
 ││╰──────▴─────╯                           ╰─────┬─────╯ ││
 │└───────┘                                       ┴───────┘│
 │ EvNumLockPressed                                        │
 │                            EvCapsLockPressed            │
 │ ╭─────────────╮                          ╭────────────╮ │
 │ │ CapsLockOff │─────────────────────────▸│ CapsLockOn │ │
 │ ╰──────▴──────╯     EvCapsLockPressed    ╰──────┬─────╯ │
 │        └────────────────────────────────────────┴       │
 ╰─────────────────────────────────────────────────────────╯
