crates/mermaid-text/tests/regression_corpus/snapshots/state_composite_nested.snap
---
source: crates/mermaid-text/tests/regression_corpus.rs
assertion_line: 72
expression: natural
---
               ╭─Active─────────────────────────────────────────╮
               │                                                │
╭─────╮        │ ╭─────╮       ╭──────╮     task    ╭─────────╮ │
(  ●  )────────┼▸(  ●  )──────▸│ Idle │────────────▸│ Working │ │
╰─────╯        │ ╰─────╯       ╰───▴──╯       done  ╰─────────╯ │
               │                   └─────────────────────┘      │
               ╰────────────────────────────────────────────────╯
