crates/mermaid-text/tests/regression_corpus/snapshots/state_composite_nested.width80.snap
---
source: crates/mermaid-text/tests/regression_corpus.rs
assertion_line: 80
expression: constrained
---
               ╭─Active─────────────────────────────────────────╮
               │                                       done     │
╭─────╮        │ ╭─────╮       ╭──────╮     task    ╭─────────╮ │
(  ●  )────────┼▸(  ●  )──────▸│ Idle │────────────▸│ Working │ │
╰─────╯        │ ╰─────╯       ╰───▴──╯             ╰─────────╯ │
               │                   └─────────────────────┘      │
               ╰────────────────────────────────────────────────╯
