crates/mermaid-text/tests/regression_corpus/snapshots/state_fork_join_full.snap
---
source: crates/mermaid-text/tests/regression_corpus.rs
expression: natural
---






                                           ╭─────────╮
                                          ▸│ Branch1 │──────┐
                                 ███      │╰─────────╯      │███
                                 ███      │                 │███
                                ▸███──────┘                 ▸███──────┐
                                │███                         ███      │╭───────╮
╭─────╮       ╱──────────╲      │███──────┐╭─────────╮      ▸███      ││╭─────╮│
(  ●  )──────▸│ Decision │──────┘         ▸│ Branch2 │──────┘         ▸││  ●  ││
╰─────╯       ╲──────────╱│  positive      ╰─────────╯                ││╰─────╯│
                          └───────────────────────────────────────────▸╰───────╯
                                                negative
