crates/mermaid-text/tests/regression_corpus/snapshots/state_fork_join_full.width80.snap
---
source: crates/mermaid-text/tests/regression_corpus.rs
expression: constrained
---






                                           ╭─────────╮
                                          ▸│ Branch1 │──────┐
                                 ███      │╰─────────╯      │███
                                 ███      │                 │███
                                ▸███──────┘                 ▸███──────┐
                                │███                         ███      │╭───────╮
╭─────╮       ╱──────────╲      │███──────┐╭─────────╮      ▸███      ││╭─────╮│
(  ●  )──────▸│ Decision │──────┘         ▸│ Branch2 │──────┘         ▸││  ●  ││
╰─────╯       ╲──────────╱│  positive      ╰─────────╯                ││╰─────╯│
                          └───────────────────────────────────────────▸╰───────╯
                                                negative
