crates/mermaid-text/tests/regression_corpus/snapshots/state_note_anchored.snap
---
source: crates/mermaid-text/tests/regression_corpus.rs
assertion_line: 72
expression: natural
---
                                                     ╭───────────────╮
                                                    ▸│ CircuitClosed │
                                                    │╰───────────────╯
╭─────╮       ╭─────────────╮───────────────────────┼────────┘
(  ●  )──────▸│ CircuitOpen │           timeout reached
╰─────╯       ╰──────▴──────╯┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┼┐
                     │                             │┆╭───────────────────────────────╮
                     │                             │┆│    Open state rejects all     │
                     │                             │─│ traffic for cool-down period. │
                     │              5 errors       │ ╰───────────────────────────────╯
                     └─────────────────────────────┘
