crates/mermaid-text/tests/regression_corpus/snapshots/state_note_anchored.width80.snap
---
source: crates/mermaid-text/tests/regression_corpus.rs
expression: constrained
---






                                               ╭───────────────╮
                                              ▸│ CircuitClosed │
                                              │╰───────┬───────╯
╭─────╮    ╭─────────────╮          timeout reached────┴
(  ●  )───▸│ CircuitOpen │───────────────────┼┘
╰─────╯    ╰──────▴──────╯┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┼┐
                  │                          │┆╭───────────────────────────────╮
                  │                          │┆│    Open state rejects all     │
                  │                          │─│ traffic for cool-down period. │
                  │            5 errors      │ ╰───────────────────────────────╯
                  └──────────────────────────┘
